2008-05-24  Sébastien Granjoux  <seb.sfo@free.fr>

	* plugins/build-basic-autotools/build-basic-autotools.c,
	plugins/build-basic-autotools/anjuta-build-basic-autotools.plugin.in,
	libanjuta/interfaces/libanjuta.idl,
	libanjuta/interfaces/anjuta-idl-compiler.pl:
	New IAnjutaBuilder interface allowing to check if a target is up to
	data and having a notification when the target is built

2008-05-21  Michael Placentra <someone@michaelplacentra2.net>

	Reviewed by Sébastien Granjoux <seb.sfo@free.fr>:
	* plugins/project-wizard/templates/django.wiz:
	Fix #533758: django project creation fails

2008-05-19  Johannes Schmid  <jhs@gnome.org>

  Patch from Pavel Kostyuchenko:
	* plugins/glade/anjuta-design-document.h:
	* plugins/glade/plugin.c (update_current_project),
	(value_added_current_editor), (glade_update_ui),
	(on_document_destroy), (glade_plugin_add_project):
	
	#532625 – Wrong consecution of functions calls when opening a glade file

2008-05-17  Sébastien Granjoux  <seb.sfo@free.fr>

	* plugins/project-wizard/templates/terminal.wiz,
	plugins/project-wizard/templates/xlib-dock.wiz,
	plugins/project-wizard/templates/wxwin.wiz,
	plugins/project-wizard/templates/java.wiz,
	plugins/project-wizard/templates/django.wiz,
	plugins/project-wizard/templates/gnome.wiz,
	plugins/project-wizard/templates/anjuta-plugin.wiz,
	plugins/project-wizard/templates/gtkmm.wiz,
	plugins/project-wizard/templates/python.wiz,
	plugins/project-wizard/templates/cpp.wiz,
	plugins/project-wizard/templates/sdl.wiz,
	plugins/project-wizard/templates/gtk.wiz,
	plugins/project-wizard/templates/minimal.wiz,
	plugins/project-wizard/templates/xlib.wiz,
	plugins/project-wizard/templates/gcj.wiz:
	Fix #533346: Create project in path with spaces fails

2008-05-17  Sébastien Granjoux  <seb.sfo@free.fr>

	* src/anjuta.glade,
	libanjuta/anjuta-preferences.c:
	Fix #531940: Can't change the default project directory

2008-05-14  Rémi Cardona  <remi@gentoo.org>
