@@ -320,6 +320,9 @@ run_plugin_instance_init (GObject *obj)
 	self->environment_vars = NULL;
 	
 	self->child = NULL;
+	
+	self->build_uri = NULL;
+	self->build_id = 0;
 }
 
 /* dispose is used to unref object created with instance_init */
