@@ -1,5 +1,12 @@
 2008-05-24  Sébastien Granjoux  <seb.sfo@free.fr>
 
+	* plugins/run-program/plugin.c,
+	plugins/run-program/execute.c,
+	plugins/run-program/plugin.h:
+	Use the IAnjutaBuilder to always run an up to date program
+
+2008-05-24  Sébastien Granjoux  <seb.sfo@free.fr>
+
 	* plugins/build-basic-autotools/build-basic-autotools.c,
 	plugins/build-basic-autotools/anjuta-build-basic-autotools.plugin.in,
 	libanjuta/interfaces/libanjuta.idl,
